--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <body>
     <div id="app"></div>
-    <h1>This works!</h1>
+    <h1 id="title">This works!</h1>
 
     <script src="src/index.js"></script>
   </body>
